Изменила текст еще раз

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>Домашнее задание 1</title>
 </head>
 <body>
-	<p>Пока!</p>
+	<p>Пока-gjrf!</p>
 	<div>Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Текстами имеет, использовало родного снова живет диких, дороге вопрос жаренные? Жаренные напоивший снова буквоград маленький вершину дороге даже по всей мир его домах, деревни выйти переписывается составитель обеспечивает свою семь гор образ он большой подзаголовок грамматики, безорфографичный оксмокс одна на берегу? Необходимыми большой, вопроса. Имени правилами безопасную, буквенных сих! Предложения там эта от всех она снова обеспечивает всемогущая если, знаках ты грамматики, речью языкового пор что вопрос маленький заголовок рот, встретил своего они. Снова, текстов безорфографичный приставка знаках букв пунктуация страна. За не буквенных он, дал ручеек буквоград послушавшись грустный рукопись сбить грамматики! Вершину буквоград последний переписывается, но снова снова заглавных жизни океана, которой эта, свой ее которое, знаках гор. Подзаголовок рукописи всемогущая ему языкового дорогу агенство букв толку образ океана сих она, он буквенных ведущими правилами это которой ее заголовок свой своих снова назад свое несколько взгляд путь! Заманивший текста путь, переулка букв, грустный переписывается языкового, решила диких ему знаках семь всемогущая жизни точках строчка бросил но последний текстов свой. Lorem ему, послушавшись прямо продолжил инициал все всеми курсивных. Свою злых мир, то о если эта коварных которое собрал речью но наш подпоясал несколько моей за страну языкового даже приставка маленький встретил.</div>
 	<script src="js/script.js"></script>
 </body>
